--- a/data/css/gnome-clocks.css
+++ b/data/css/gnome-clocks.css
@@ -1,3 +1,5 @@
+@define-color stripe_color alpha (@theme_fg_color, 0.4);
+
 ClocksWindow > .frame {
     background-color: mix(@theme_fg_color, @theme_bg_color, 0.95);
     box-shadow: inset 0 5px 2px -6px black;
@@ -22,22 +24,25 @@ ClocksWindow > .frame:backdrop {
 
 /* world */
 
-.clocks-digital-renderer.light.stripe {
-    background-color: rgba(255, 255, 255, 0.4);
-    color: black;
+.dark-stripe {
+    background-color: @stripe_color;
+    color: @theme_bg_color;
+    border: 0;
 }
 
-.clocks-digital-renderer.light.stripe:prelight {
-    background-color: rgba(255, 255, 255, 0.6);
+.light-stripe {
+    background-color: @stripe_color;
+    color: @theme_bg_color;
+    border: 0;
 }
 
-.clocks-digital-renderer.dark.stripe {
-    background-color: rgba(0, 0, 0, 0.4);
-    color: white;
+.close-button-box {
+    background-color: @stripe_color;
+    color: @theme_bg_color;
 }
 
-.clocks-digital-renderer.dark.stripe:prelight {
-    background-color: rgba(0, 0, 0, 0.2);
+.time-label {
+    font-size: 32px;
 }
 
 /* alarms */
