--- a/data/ui/locationtile.ui
+++ b/data/ui/locationtile.ui
@@ -85,6 +85,20 @@
                           <property name="height">1</property>
                         </packing>
                       </child>
+                      <child>
+                        <object class="GtkImage" id="geolocation_symbol">
+                          <property name="no-show-all">True</property>
+                          <property name="icon-size">1</property>
+                          <property name="icon-name">find-location-symbolic</property>
+                          <property name="halign">center</property>
+                        </object>
+                        <packing>
+                          <property name="left_attach">0</property>
+                          <property name="top_attach">3</property>
+                          <property name="width">1</property>
+                          <property name="height">1</property>
+                        </packing>
+                      </child>
                     </object>
                   </child>
                 </object>
