--- a/data/css/gnome-clocks.css
+++ b/data/css/gnome-clocks.css
@@ -1,3 +1,5 @@
+@define-color stripe_color alpha (@theme_fg_color, 0.4);
+
 ClocksWindow > .frame {
     background-color: mix(@theme_fg_color, @theme_bg_color, 0.95);
     box-shadow: inset 0 5px 2px -6px black;
@@ -38,6 +40,27 @@ ClocksWindow > .frame:backdrop {
 
 .clocks-digital-renderer.dark.stripe:prelight {
     background-color: rgba(0, 0, 0, 0.2);
+}
+
+.stripe {
+    background-color: @stripe_color;
+    color: @theme_bg_color;
+    border: 0;
+}
+
+.close-button-box {
+    background-color: @stripe_color;
+    color: @theme_bg_color;
+}
+
+.time-label {
+    font-size: 48px;
+    font-weight: 100;
+}
+
+.city-label {
+    font-size: 16px;
+    font-weight: bold;
 }
 
 /* alarms */
