--- a/data/css/gnome-clocks.css
+++ b/data/css/gnome-clocks.css
@@ -42,6 +42,11 @@ ClocksWindow > .frame:backdrop {
 
 /* alarms */
 
+.time-label {
+    font-size: 48px;
+    font-weight: 100;
+}
+
 .clocks-digital-renderer.active {
     background-color: transparent;
     background-image: -gtk-gradient(radial,
