widgets: Add ContentViewAlarm class
Show alarmtiles in box view in ContentViewAlarm class. Add get_alarm_details in
alarm.vala to get alarm details such as time, name, active state etc. Add signals
to update active state and alarm label directly using the alarm tile.

https://bugzilla.gnome.org/show_bug.cgi?id=742538

--- a/data/ui/alarm.ui
+++ b/data/ui/alarm.ui
@@ -46,10 +46,12 @@
       </object>
     </child>
     <child>
-      <object class="ClocksContentView" id="content_view">
+      <object class="ClocksContentViewAlarm" id="content_view">
         <property name="visible">True</property>
         <signal name="item-activated" handler="item_activated" swapped="no"/>
-        <signal name="delete-selected" handler="delete_selected" swapped="no"/>
+        <signal name="delete-alarm" handler="delete_alarm" swapped="no"/>
+        <signal name="toggle-active-alarm" handler="toggle_active_alarm" swapped="no"/>
+        <signal name="change-alarm-label" handler="change_alarm_label" swapped="no"/>
         <signal name="notify::empty" handler="empty_changed" swapped="no"/>
       </object>
     </child>
